--- a/index.html
+++ b/index.html
@@ -88,19 +88,19 @@
         <section class="features-section">
                 <div class="container">
                     <div class="feature-item">
-                        <img src="img/Face Massage.svg" alt="Icono de Tratamiento Especial">
+                        <img src="img/Face Massage.png" alt="Icono de Tratamiento Especial">
                         <h3>15+</h3>
                         <p>Special Treatment</p>
                     </div>
                     
                     <div class="feature-item">
-                        <img src="img/Lotus.svg" alt="Icono de Terapeuta Profesional">
+                        <img src="img/Lotus.png" alt="Icono de Terapeuta Profesional">
                         <h3>25+</h3>
                         <p>Professional Therapist</p>
                     </div>
                     
                     <div class="feature-item">
-                        <img src="img/Mortar.svg" alt="Icono de Fórmula Herbal">
+                        <img src="img/Mortar.png" alt="Icono de Fórmula Herbal">
                         <h3>100%</h3>
                         <p>Herbal Cream Formula</p>
                     </div>
